--- a/public/index.html
+++ b/public/index.html
@@ -26,5 +26,6 @@
     <script>
       AOS.init();
     </script>
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FSUBJECT';ftypes[1]='text';fnames[6]='MMERGE6';ftypes[6]='number';fnames[4]='PHONE';ftypes[4]='phone';fnames[2]='MMERGE2';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
   </body>
 </html>
