--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     <script src="https://kit.fontawesome.com/262b1953cc.js" crossorigin="anonymous"></script>
     <title>Decentraliz Dashboard</title>
     <script src="https://kit.fontawesome.com/262b1953cc.js" crossorigin="anonymous"></script>
+    <script src="https://smtpjs.com/v3/smtp.js">
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -26,6 +28,6 @@
     <script>
       AOS.init();
     </script>
-    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FSUBJECT';ftypes[1]='text';fnames[6]='MMERGE6';ftypes[6]='number';fnames[4]='PHONE';ftypes[4]='phone';fnames[2]='MMERGE2';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+<script src="https://smtpjs.com/v3/smtp.js"></script>
   </body>
 </html>
