--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,9 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <script src="https://kit.fontawesome.com/262b1953cc.js" crossorigin="anonymous"></script>
-  <title>Decentraliz Dashboard</title>
-  <script src="https://kit.fontawesome.com/262b1953cc.js" crossorigin="anonymous"></script>
+  <title>Micheal Leverton</title>
 </head>
 
 <body>
